2015-09-06 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- allowed 'point meta={(x<=5 ? ...)} which caused compilation errors
	before due to the '=' sign
	- ensured that 'shader=flat' returns the same result for every choice of 'z buffer'

2015-09-05 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- added colormap name=viridis and colormap/viridis high res

2015-08-27 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug: polar lib did not support 'x dir=reverse'

2015-08-06 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug: 'axis line style={draw=none}' had no effect unless one had 2d boxed axes 

2015-08-05 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- new feature: 'matrix plot' (or 'imagesc') which allows cell-based matrix plots
	- new feature: unbounded point meta in mesh plots will be treated like an
	invisible patch

2015-07-30 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- new feature: shift axis lines together with all their descriptions

2015-07-29 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- addressed javascript incompatibility between Acrobat reader DC and clickable lib
	- polar axes: repaired default axis label positions
	- polar axes: repaired support for sloped descriptions

2015-06-20 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug: 'compat=1.9' (or newer) failed to work with log bar plots

2015-05-25 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- xticklabel pos=top|bottom was supposed to work, but had no
	implementation. Added it.
	- new feature: 'xtick distance' allows to define tick positions by distance

2015-05-23 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- \pgfplotsforeachungrouped: added support for \breakforeach
	- \pgfplotsforeachentryinCSV: added support for \breakforeach
