@@ -50,6 +50,7 @@ HISTORY:
 - fixed bug in polar axes: repaired support for sloped descriptions
 - fixed bug: 'axis line style={draw=none}' had no effect unless one had 2d boxed axes 
 - fixed bug: point meta expressions with '=' inside of them which caused compilation errors
+- fixed bug: compat=1.13 combined with interrupted plots (by empty line) failed to work
 - fixed bug: compat=1.13 combined with lualatex evaluated relational operations (<, ==) with the wrong operator precedence
 - utility function \pgfplotsforeachungrouped: added support for \breakforeach
 - new feature: 'xtick distance' allows to define tick positions by distance
