@@ -29,7 +29,7 @@ You should have at least |compat=1.3|. The suggested value is printed to the |.l
 
 Here is a list of changes which are inactive unless one uses a suitable |compat| level:
 \begin{enumerate}
-	\item \PGFPlots\ 1.13 repairs axis labels in polar axis. Older compatibility levels are present to keep workarounds by end-users.
+	\item \PGFPlots\ 1.13 repairs axis labels in polar axis and ensures that the color chosen by |shader=flat| is independent of |z buffer| and |mesh/ordering|. Older compatibility levels are present to keep workarounds by end-users.
 	
 	\item \PGFPlots\ 1.12 activates |lua backend| and defines |boxplot/estimator=Excel|.
 
