@@ -619,7 +619,10 @@ The following example uses |mark=cube*| and |z buffer=sort| to place boxes at ea
 
 	\noindent There are (currently) two possibilities to determine the single color for every segment:
 	\begin{description}
-		\item[\declaretext{flat corner}] Uses the color data of one vertex to color the segment. It is not defined which vertex is used here\footnote{\PGFPlots\ just uses the first vertex encountered in its internal processings -- but after any $z$ buffer re-orderings.}.
+		\item[\declaretext{flat corner}] Uses the color data of one vertex to color the segment. The color of the \emph{first} vertex determines the color of the entire segment. Note that \PGFPlots\ ensures that the outcome is always the same, even if the vertices are reordered due to |z buffer|ing or |mesh/ordering|. 
+
+		Note that \PGFPlots\ versions up to and including~1.12 chose one of them without respectiving reordering. In order to have the ordering independent of other features, you have to write |compat=1.13| or newer.
+		
 
 		\item[\declaretext{flat mean}] Uses the mean of all four color data values as segment color. This is the initial value as it provides symmetric colors for symmetric functions.
 	\end{description}
