@@ -3017,20 +3017,24 @@
 	\if1\pgfplotsscanlinelength@nan@isfirst
 	\else
 		\def\pgfplotsscanlinelength@nan@pendingwork{%
-			% this will be executed when the next point has been
-			% found.
-			\def\pgfplots@current@point@x{}%
-			\def\pgfplots@current@point@y{}%
-			\def\pgfplots@current@point@z{}%
-			% simply serialize an empty point. That works -- the
-			% visualization phase checks if the coordinates are empty and
-			% visualizes them as "jump"
-			%
-			% Note that \pgfplotsplothandlersurveypoint is not a good
-			% choice here unless one employs its 'unbounded coords=jump'
-			% feature
-			\def\pgfplotsaxisplothasjumps{1}%
-			\pgfplotsaxisserializedatapoint
+			\ifpgfplots@LUA@backend@supported
+				\pgfplotsutil@directlua{pgfplots.texSurveyAddJump()}%
+			\else
+				% this will be executed when the next point has been
+				% found.
+				\def\pgfplots@current@point@x{}%
+				\def\pgfplots@current@point@y{}%
+				\def\pgfplots@current@point@z{}%
+				% simply serialize an empty point. That works -- the
+				% visualization phase checks if the coordinates are empty and
+				% visualizes them as "jump"
+				%
+				% Note that \pgfplotsplothandlersurveypoint is not a good
+				% choice here unless one employs its 'unbounded coords=jump'
+				% feature
+				\def\pgfplotsaxisplothasjumps{1}%
+				\pgfplotsaxisserializedatapoint
+			\fi
 			%
 			\let\pgfplotsscanlinelength@nan@pendingwork=\relax
 		}%
@@ -3742,9 +3746,14 @@
 			\def\pgfplots@LUA@backend@serialized@commands{%
 				\noexpand\def\noexpand\pgfplots@LUA@backend@plotnum{\pgfplots@LUA@backend@plotnum}%
 			}%
+			\def\pgfplotsapplistXXpushback##1{%
+				\pgfplots@error{Illegal internal state encountered: lua backend should have been invoked at this point}%
+			}%
 		\fi
 	\fi
 }%
+
+\let\pgfplotsapplistXXpushback@orig=\pgfplotsapplistXXpushback
 
 \def\pgfplots@LUA@survey@point{%
 	\edef\pgfplots@loc@TMPa{pgfplots.texSurveyPoint("\pgfplots@current@point@x","\pgfplots@current@point@y","\pgfplots@current@point@z","\pgfplots@current@point@meta")}%
@@ -3757,6 +3766,7 @@
 	% LUA defines a couple of TeX macros here...
 	\pgfplotsutil@directlua{pgfplots.texSurveyEnd()}%
 	%
+	\let\pgfplotsapplistXXpushback=\pgfplotsapplistXXpushback@orig
 	\pgfplotsapplistXXpushback{--- acquire from LUA! --}%
 }%
 
