@@ -3,6 +3,8 @@
 	- allowed 'point meta={(x<=5 ? ...)} which caused compilation errors
 	before due to the '=' sign
 	- ensured that 'shader=flat' returns the same result for every choice of 'z buffer'
+	- fixed bug: interrupted plots defined by an empty line failed to work
+	with lua backend
 
 2015-09-05 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
 
